Fixed feedback bubble on mobile and in big screens

--- a/resources/styles/bubbles-two.css
+++ b/resources/styles/bubbles-two.css
@@ -14,8 +14,8 @@
 
 .bubble-bug {
   position: absolute;
-  top: 3.6vh;
-  right: 2.5vw;
+  top: 20px;
+  right: 10px;
   display: none;
   padding: 10px;
   background: rgba(255, 255, 255, 0.6);
